fix: video still playing behind the scene

--- a/src/Home/Home.css
+++ b/src/Home/Home.css
@@ -27,7 +27,6 @@
   box-shadow: 0 0 10px 10px black, 0 0 10px 6px white;
   border-radius: 10px;
   background-color: rgb(49, 47, 71);
-  height: inherit;
   overflow-y: auto;
   overflow-x: hidden;
   height: 4347px;
@@ -44,17 +43,17 @@
   justify-content: center;
 }
 
-.upcoming-anime-list::-webkit-scrollbar {
+.upcoming-anime-list-container::-webkit-scrollbar {
   width: 5px;
   background-color: #F5F5F5;
 }
 
-.upcoming-anime-list::-webkit-scrollbar-track {
+.upcoming-anime-list-container::-webkit-scrollbar-track {
   box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
   background-color: #444242;
 }
 
-.upcoming-anime-list::-webkit-scrollbar-thumb {
+.upcoming-anime-list-container::-webkit-scrollbar-thumb {
   background-color: #F90; 
   border-radius: 10px;
 }
